<resources>
    <string name="app_name">OurHomework App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="social_login">Social Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="googlelogin">googleLogin</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_homework">Add Homework</string>
    <string name="cancelregisterbutton">cancelRegisterButton</string>
</resources>