<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/login_background"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/profile_image"
            android:importantForAccessibility="no" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/fui_ic_mail_white_24dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:id="@+id/email_input"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="18dp"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:id="@+id/password_input"
            android:autofillHints="" />

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:id="@+id/createAccount_btn"/>

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="Already have an account? Sign in!"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:id="@+id/goToLogin"/>


    </LinearLayout>

</RelativeLayout>