<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/login_background"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/profile_image"
            android:importantForAccessibility="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:hint="  Email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="32dp"
            android:id="@+id/username_input"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:hint=" Password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="18dp"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            android:textColor="#3b84f1"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_btn"
            android:background="@drawable/rounded_corners"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:id="@+id/register_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/google"
                android:importantForAccessibility="no" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/xtwitter"
                android:importantForAccessibility="no" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook"
                android:importantForAccessibility="no" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>